--- a/PartyInvites/Views/Home/MyView.cshtml
+++ b/PartyInvites/Views/Home/MyView.cshtml
@@ -10,6 +10,10 @@
 <body>
     <div>
         @ViewBag.Greeting Hello World (from the view)
+        <p>
+            We're going to have an exciting party.<br />
+            (To do: sell it better. Add pictures or something.)
+        </p>
     </div>
 </body>
 </html>
