--- a/PartyInvites/Views/Home/MyView.cshtml
+++ b/PartyInvites/Views/Home/MyView.cshtml
@@ -6,14 +6,13 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 <body>
-    <div>
-        @ViewBag.Greeting Hello World (from the view)
-        <p>
-            We're going to have an exciting party.<br />
-            (To do: sell it better. Add pictures or something.)
-        </p>
+    <div class="text-center">
+        <h3>We're going to have an exciting party!</h3>
+        <h4>And you are invited</h4>
+        <a class="btn btn-primary" asp-action="RsvpForm">RSVP Now</a>
     </div>
 </body>
 </html>
